# DynamicAO

./: .gitignore  CMakeLists.txt  README.txt
cmake/: FindOptiX.cmake  configure.cmake
common/imgui/: CMakeLists.txt
contrib/bvh/: CMakeLists.txt
contrib/gdt/: CMakeLists.txt
ml/: nn.ipynb  out.txt  test.ipynb
ml/logs_research/delta_model/train/: events.out.tfevents.1716682386.CSCE-5TW2XK2.20936.7.v2
ml/logs_research/delta_model/validation/: events.out.tfevents.1716682514.CSCE-5TW2XK2.20936.8.v2
ml/logs_research/delta_model_2/train/: events.out.tfevents.1716684714.CSCE-5TW2XK2.20936.9.v2
ml/logs_research/delta_model_3/train/: events.out.tfevents.1716684778.CSCE-5TW2XK2.20936.10.v2
ml/logs_research/delta_model_3/validation/: events.out.tfevents.1716684917.CSCE-5TW2XK2.20936.11.v2
ml/logs_research/delta_model_4/train/: events.out.tfevents.1716687932.CSCE-5TW2XK2.20936.12.v2
ml/logs_research/delta_model_4/validation/: events.out.tfevents.1716688094.CSCE-5TW2XK2.20936.13.v2
ml/logs_research/delta_model_v0_3layer_relu/train/: events.out.tfevents.1717027108.CSCE-5TW2XK2.18684.7.v2  events.out.tfevents.1717027149.CSCE-5TW2XK2.18684.8.v2
ml/logs_research/delta_model_v0_3layer_relu/validation/: events.out.tfevents.1717027234.CSCE-5TW2XK2.18684.9.v2
ml/logs_research/model_3layer/train/: events.out.tfevents.1716689871.CSCE-5TW2XK2.20936.14.v2
ml/logs_research/model_3layer/validation/: events.out.tfevents.1716690041.CSCE-5TW2XK2.20936.15.v2
ml/logs_research/model_5layer/train/: events.out.tfevents.1716742839.CSCE-5TW2XK2.20936.16.v2
ml/logs_research/model_5layer/validation/: events.out.tfevents.1716742985.CSCE-5TW2XK2.20936.17.v2
ml/logs_research/model_5layer_relu/train/: events.out.tfevents.1716762916.CSCE-5TW2XK2.20936.18.v2  events.out.tfevents.1716827190.CSCE-5TW2XK2.20936.20.v2
ml/logs_research/model_5layer_relu/validation/: events.out.tfevents.1716763082.CSCE-5TW2XK2.20936.19.v2  events.out.tfevents.1716827394.CSCE-5TW2XK2.20936.21.v2
ml/logs_research/model_v0_2layer_relu/train/: events.out.tfevents.1716934336.CSCE-5TW2XK2.20936.22.v2
ml/logs_research/model_v0_2layer_relu/validation/: events.out.tfevents.1716934684.CSCE-5TW2XK2.20936.23.v2
ml/logs_research/model_v0_3layer_relu/train/: events.out.tfevents.1716935341.CSCE-5TW2XK2.20936.24.v2
ml/logs_research/model_v0_3layer_relu/validation/: events.out.tfevents.1716935466.CSCE-5TW2XK2.20936.25.v2
ml/logs_research/model_v0_4layer_relu/train/: events.out.tfevents.1716935494.CSCE-5TW2XK2.20936.26.v2
ml/logs_research/model_v0_4layer_relu/validation/: events.out.tfevents.1716935644.CSCE-5TW2XK2.20936.27.v2
ml/logs_research/model_v0_5layer_relu/train/: events.out.tfevents.1716935711.CSCE-5TW2XK2.20936.28.v2
ml/logs_research/model_v0_5layer_relu/validation/: events.out.tfevents.1716935863.CSCE-5TW2XK2.20936.29.v2
ml/logs_research/model_v1_1_3layer_relu/train/: events.out.tfevents.1716939947.CSCE-5TW2XK2.20936.32.v2
ml/logs_research/model_v1_1_3layer_relu/validation/: events.out.tfevents.1716940146.CSCE-5TW2XK2.20936.33.v2
ml/logs_research/model_v1_2_3layer_relu/train/: events.out.tfevents.1716952884.CSCE-5TW2XK2.18684.0.v2
ml/networks/: research_delta_model.keras  research_model.keras  research_model_v2.keras  research_model_v3.keras  research_model_v4.keras  research_true_delta.keras
raster/: Shape.cpp  main.cpp
rasterizer/: Object.cpp  Object.h  main.cpp
resources/: pass2_frag.glsl  pass2_vert.glsl  phong_frag.glsl  phong_vert.glsl  surface_vert.glsl
resources/evaluators/: arm.txt  model.txt  research.txt  test.txt  testmodel.txt
resources/evaluators/decoder_256x256/: fingerprint.pb  saved_model.pb
resources/evaluators/decoder_256x256/variables/: variables.index  (+1 more)
resources/evaluators/research_256x256/: fingerprint.pb  saved_model.pb
resources/generators/research_256x256/: fingerprint.pb  saved_model.pb
resources/models/arm/: arm_bind_pose.txt  arm_hierarchy.txt  arm_skeleton.txt  arm_skin.txt  arm_static_transforms.txt  old_arm_hierarchy.txt  old_arm_skeleton.txt  old_arm_skin.txt
resources/models/maria/: maria_bind_pose.txt  maria_hierarchy.txt  maria_skeleton.txt  maria_skin.txt  maria_static_transforms.txt
resources/models/maria-working/: maria_bind_pose.txt  maria_hierarchy.txt  maria_skeleton.txt  maria_skin.txt  maria_static_transforms.txt
resources/models/research/: research_bind_pose.txt  research_hierarchy.txt  research_skeleton.txt  research_skin.txt  research_skin_old.txt  research_static_transforms.txt  research_vocc.txt  research_vocc_-90_-90.txt
resources/models/vanguard/: vanguard_bind_pose.txt  vanguard_hierarchy.txt  vanguard_skel.txt  vanguard_skel_local.txt  vanguard_static_transforms.txt  vanguard_vanguard_Mesh_skin.txt  vanguard_vanguard_visor_skin.txt
resources/models/warrior/: warrior_bind_pose.txt  warrior_hierarchy.txt  warrior_skeleton.txt  warrior_skin.txt  warrior_static_transforms.txt
resources/occlusion/: _warrior_test_data.txt  _warrior_train_data.txt  base.txt  data.txt  dataAbs.txt  dataFixed.txt  dataTest.txt  warrior_data.txt  warrior_test_data_0.txt
resources/shaders/: ao_frag.glsl  ao_vert.glsl  frag.glsl  phong_frag.glsl  phong_vert.glsl  vert.glsl
src/: AABB.cpp  AABB.h  Batch.cu  Batch.cuh  BlinnPhong.cpp  Camera.cpp  Camera.h  Collision.h  Ellipsoid.cpp  Ellipsoid.h  Evaluator.cu  Evaluator.cuh  File.cu  Hit.cpp  Hit.h  Image.cpp  Light.h  LinearLayer.cu  LinearLayer.cuh  Material.cpp  Material.h  Matrix.cu  Matrix.cuh  Mesh.cpp  Mesh.h  NNException.h  NNLayer.h  NeuralNetwork.cpp  NeuralNetwork.h  Object.cpp  Object.h  Occluder.cpp  Occluder.h  Plane.cpp  Plane.h  RasterCam.cpp  Rasterizer.cpp  Rasterizer.h  Raytracer.cpp  Raytracer.h  (+16 more)
src/dao/: CMakeLists.txt  Evaluator.cu  Evaluator.cuh  Light.cpp  Material.cpp  Matrix.cuh  Mesh.cpp  Mesh.h  Object.cpp  Object.h  RasterCam.h  Rasterizer.cpp  Rasterizer.h  Ray.h  Scene.h  TanhActivation.cu  Texture.cpp  main.cpp
src/rtao/: CMakeLists.txt  CUDABuffer.h  Image.h  LaunchParams.h  Model.cpp  Model.h  SampleRenderer.cpp  SampleRenderer.h  devicePrograms.cu  main.cpp
(+52 files in other folders)
